src/components/sections/MapSection/MapSection.module.scss
.root {
    //margin:80px 0px;
}

.title {

}

.revenueTable {
}

.alignRight {

}

.container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.containerLeft {
    min-width: 300px;
     flex-basis: 70%;
     order:1;
}

.containerRight {
    min-width: 200px;
    flex-basis: 30%;
    order:2;
    //float: right;
    // min-height: 400px;/* bunt on proper height*/

    //    border: 1px solid;
}

.containerBottom {
    min-width:300px;
    flex-basis:100%;		    
    height: 600px;
    order:3;
    // min-height: 400px;/* bunt on proper height*/
    //height: 600px;/* bunt on proper height*/
    //    border: 1px solid;
}

